--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "@apollo/server": "^4.10.5",
     "@prisma/client": "^5.17.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
