--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "prisma": "^5.17.0",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.5.4"
@@ -22,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2"
