--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "concurrently": "^8.2.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
