--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
     "concurrently": "^8.2.2",
+    "emoji-picker-react": "^4.11.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "next": "14.2.5",
