Created a service to upload images along with tweet

--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run codegen\" next dev",
-    "devs":"next dev",
+    "devs": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,17 +14,19 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "axios": "^1.7.5",
     "concurrently": "^8.2.2",
     "emoji-picker-react": "^4.11.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@google-cloud/storage": "^7.12.1",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.3",
     "@graphql-codegen/introspection": "4.0.3",
