--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.51.23",
     "axios": "^1.7.5",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.11.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
