--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.4.0",
     "graphql": "^16.9.0",
